force-app/main/default/objects/PDLM__Training_Assignment__c/PDLM__Training_Assignment__c.object-meta.xml
<CustomObject>
    <label>Training Assignment</label>
    <nameField>
        <displayFormat>TA-{00000}</displayFormat>
        <label>Training Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>