force-app/main/default/objects/PDLM__Training_Assignment__c/fields/Completed_Late__c.field-meta.xml
<CustomField>
    <fullName>Completed_Late__c</fullName>
    <formula>DATEVALUE(PDLM__Completed_Date__c) &gt; PDLM__Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed Late</label>
    <type>Checkbox</type>
</CustomField>