force-app/main/default/objects/PDLM__Training_Assignment__c/fields/Due_in_7_Days__c.field-meta.xml
<CustomField>
    <fullName>Due_in_7_Days__c</fullName>
    <formula>AND(ISBLANK(PDLM__Completed_Date__c) = TRUE, PDLM__Is_Late__c = FALSE,
PDLM__Due_Date__c - TODAY() &lt; 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due in 7 Days</label>
    <type>Checkbox</type>
</CustomField>