force-app/main/default/objects/PDLM__Training_Assignment__c/fields/Is_Open__c.field-meta.xml
<CustomField>
    <fullName>Is_Open__c</fullName>
    <formula>ISBLANK(PDLM__Completed_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Open</label>
    <type>Checkbox</type>
</CustomField>