force-app/main/default/objects/PDLM__Training_Assignment__c/fields/PDLM__Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>