force-app/main/default/objects/PDLM__Training_Assignment__c/fields/PDLM__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>