force-app/main/default/objects/PDLM__Training_Assignment__c/fields/PDLM__Is_Late__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Is_Late__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Late</label>
    <type>Checkbox</type>
</CustomField>