force-app/main/default/objects/PDLM__Training_Assignment__c/fields/PDLM__Item__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>PDLM__Item_Revision__c</referenceTo>
    <relationshipLabel>Training Assignments</relationshipLabel>
    <relationshipName>Training_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>