force-app/main/default/objects/PDLM__Training_Assignment__c/fields/PDLM__Plan_Description__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Plan_Description__c</fullName>
    <description>Formula field used in training assignment email templates</description>
    <formula>PDLM__Training_Plan__r.PDLM__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Description</label>
    <type>Text</type>
</CustomField>