force-app/main/default/objects/PDLM__Training_Assignment__c/listViews/PDLM__All.listView-meta.xml
<ListView>
    <fullName>PDLM__All</fullName>
    <columns>NAME</columns>
    <columns>PDLM__Training_Plan__c</columns>
    <columns>PDLM__Plan_Description__c</columns>
    <columns>PDLM__Trainee_Name__c</columns>
    <columns>PDLM__Item__c</columns>
    <columns>PDLM__Item_Description__c</columns>
    <columns>PDLM__Quiz_Status__c</columns>
    <columns>PDLM__Status__c</columns>
    <columns>PDLM__Due_Date__c</columns>
    <columns>PDLM__Is_Late__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>